# rusty-chat

./: .gitignore  Cargo.toml  README.md
src/: main.rs  state.rs
static/: index.html  index.js  style.css
