[package]
name = "chatly"
version = "0.1.0"
edition = "2021"

[dependencies]
socketioxide = { version = "0.15.1", features = ["state"] }
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
axum = "0.7.9"
serde = {version = "1.0.216", features = ["derive"]}
serde_json = "1.0.133"
tower-http = {version = "0.6.2", features = ["cors", "fs"]}
tower = "0.5.2"
chrono = { version = "0.4.39", features = ["serde"] }